# evals

./: .env.example  .gitignore  ARCHITECTURE.md  FAILURE_MODES.md  OPEN_PROBLEMS.md  README.md  WEEKEND_PLAN.md  pyproject.toml  temp.txt
datasets/challenge2/: extraction.jsonl
datasets/challenge3/: openended.jsonl
datasets/challenge7/: rag_qa.jsonl
docs/: ARCHITECTURE.md  FAILURE_MODES.md  LEARNINGS.md  OPEN_PROBLEMS.md
docs/backlog/: broken-json-detection-and-fix.md  cli-defaults.md  latency-metrics.md  metric-decomposition.md  scorer_protocol.md  show-robustness-support.md  testing-strategy.md  three-tier-cascade-scorer.md
evals/: core.py  perturbation_generator.py  reporters.py  robustness_reporter.py  runner.py  scorer_factory.py  sensitivity_reporter.py  variation_generator.py
evals/scorers/: _json_utils.py  cascade.py  context_sufficiency.py  exact.py  faithfulness.py  llm_judge.py  regex.py  regex_scorer.py  schema.py
runners/: benchmark.py
scripts/: benchmark.py  robustness.py  run_eval.py  sensitivity.py  show.py
tests/: test_benchmark.py  test_cascade.py  test_exact.py  test_faithfulness_scorer.py  test_json_repair.py  test_llm_judge.py  test_metric_decomposition.py  test_perturbation_generator.py  test_regex.py  test_regex_scorer.py  test_robustness_reporter.py  test_schema.py  test_sensitivity.py  test_sensitivity_reporter.py  test_validate_variations.py
