[project]
name = "evals-from-scratch"
version = "0.1.0"
description = "LLM evaluation framework built from first principles"
requires-python = ">=3.11"
dependencies = [
    "ollama>=0.4.0",
    "tqdm>=4.66.0",
    "tabulate>=0.9.0",
    "jsonschema>=4.23.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
